# reading-addiction

./: Cargo.toml  README.md
data/: clusters-8-1763892328-labels.json  clusters-8-1763892328.json
scripts/: cleanup-markdown.py  cluster_3d.py  cluster_labels_hist.py  cluster_viz.py  http-histogram.py  public_id_migration.py  reading_time.py  tag_hist.py  test_mistral_embed.sh  test_mistral_embedding.json
src/: db.rs  lib.rs  main.rs  pocket.rs  server.rs  worker.rs
templates/: article.html  base.html  list.html
