[package]
name = "gpa-leesverslaving"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
csv = "1.4.0"
dom_smoothie = "0.13.0"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "rustls-tls", "system-proxy", "charset"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt", "macros", "sync", "time"] }
