[package]
name = "reading-addiction"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-channel = "2.5.0"
clap = { version = "4.5.52", features = ["derive"] }
csv = "1.4.0"
dom_smoothie = "0.13.0"
ndarray = "0.17.1"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "rustls-tls", "system-proxy", "charset", "json"] }
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
text-splitter = { version = "0.28.0", features = ["markdown"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-rusqlite = "0.7.0"
axum = "0.8"
maud = { version = "0.27", features = ["axum"] }
pulldown-cmark = "0.13"
urlencoding = "2.1"
